# vms

./: CMakeLists.txt  README
aux/: do-config.sh
cmake/: FindPetsc.cmake
example/: Makefile  lshape.cpp  lshape_square.cpp
example/results/global/: convergence.tex  global_0015625.out  global_003125.out  global_00625.out  global_0125.out  global_025.out  global_min.out  global_spr.out  global_vms1.out  global_vms2.out
mesh/: Makefile  square.cpp
src/: 1D_global_qoi.cpp  2D_global_qoi.cpp  2D_global_qoi_tri.cpp  CMakeLists.txt  adapter.cpp  adapter.hpp  adv_diff_input.hpp  control.cpp  control.hpp  disc.cpp  disc.hpp  estimator.cpp  estimator.hpp  hello.cpp  input.hpp  integrator.cpp  integrator.hpp  linalg.cpp  linalg.hpp  linear_algebra.cpp  linear_algebra.hpp  lshape_globalqoi.cpp  lshape_globalqoi_spr.cpp  lshape_squareqoi.cpp  mesh.cpp  mesh.hpp  size.cpp  size.hpp  solver.cpp  solver.hpp  tau.cpp  tau.hpp
